--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1013,3 +1013,105 @@ header[class=list-header] {
     display: none;
 }
 /* END list.html */
+
+
+/* contact.html */
+
+.contact-sec{
+/*    background-color: #E6E6E6;
+*/    width: 1366px;
+    height: 570px;
+    text-align: center;
+}
+
+.map{
+    display: inline-block;
+    width: 1018px;
+    height: 300px;
+    vertical-align: top;
+    margin-left: 50px;
+    margin-top: 52px;
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    filter: grayscale(100%);
+}
+
+.text-conteiner{
+/*  text-align: center;
+*/  padding-top: 70px;
+    display: inline-block;
+/*    background-color: #E6E6E6;
+*/
+}
+
+.title{
+    font-size: 20px;
+    font-family: "ultralight";
+    color: black;
+}
+
+.contact-li span{
+    color: #808080;
+}
+
+.contact-li{
+    font-family: "light";
+    color: #000000;
+}
+
+.conteiner{
+    max-width: 1640px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.inbox{
+    width: 100%;
+    max-width: 730px;
+    width: 100%;
+}
+
+.forms{
+    font-family: 'light';
+}
+
+input{
+    width: 100%;
+    padding: 12px 20px;
+    margin-left: 80px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 23px;
+    box-shadow: 1px 1px 1px rgb(201, 199, 199);
+    border: rgb(202, 200, 200) 1px solid;
+ }
+label{
+    font-size: 23px;
+    margin-left: 110px;
+    margin-top: 10px;
+}
+.textarea-group{
+    resize: none;
+    width: 100%;
+    padding: 12px 20px;
+    margin-left: 80px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 112px;  
+    box-shadow: 1px 1px 1px rgb(201, 199, 199);
+    border: rgb(202, 200, 200) 1px solid;
+}
+.send{
+    margin-left: 80px;
+    background-color: #f2f2f2;
+    color: #000000;
+    border: none; 
+    width: 150px;
+    height: 52px;
+    text-transform: uppercase;
+    font-size: 21px;
+    margin-top: 40px;
+    margin-bottom: 0px;
+}
