--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1018,19 +1018,19 @@ header[class=list-header] {
 /* contact.html */
 
 .contact-sec{
-/*    background-color: #E6E6E6;
-*/    width: 1366px;
-    height: 570px;
+ width: 100%;
+ height: 50%;
     text-align: center;
+    padding-bottom: 45px;
 }
 
 .map{
     display: inline-block;
-    width: 1018px;
-    height: 300px;
+    width: 50%;
+    height: 30%;
     vertical-align: top;
     margin-left: 50px;
-    margin-top: 52px;
+    margin-top: 69px;
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
     -ms-filter: grayscale(100%);
@@ -1042,6 +1042,7 @@ header[class=list-header] {
 /*  text-align: center;
 */  padding-top: 70px;
     display: inline-block;
+    width: 25%;
 /*    background-color: #E6E6E6;
 */
 }
